--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,6 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <a href="/babyindex">Baby Info</a>&nbsp<a href="/feedingindex">Track Feeding</a>
   </body>
 </html>
