--- a/views/baby/index.ejs
+++ b/views/baby/index.ejs
@@ -53,7 +53,11 @@
             <td>
                 <a href="/feed/<%= b._id %>/new">Add Feeding Schedule</a>
             </td>
+            <td>
+                <a href="/feed/babyid/<%= b._id%>">Feeding Log</a>
+            </td>
         </tr>
+        
     <%  })%>
 </tbody>
 </table>
