--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SplashPage</title>
 </head>
 <body>
-   Banana 
+   <h1>Baby App</h1>
+   <div>
+       <label><strong>Sign Up</strong></label> <br>
+      <input type="email" name ="email"><button type="submit">Submit</button>
+      <br>
+      <a href="/babies/new">Enter Baby Info</a>&nbsp&nbsp&nbsp<a href="/babies">All Babies</a>
+
+   </div>
 </body>
 </html>
