--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,8 @@
 <body>
    <h1>Baby App</h1>
    <div>
-       <label><strong>Sign Up</strong></label> <br>
-      <input type="email" name ="email"><button type="submit">Submit</button>
+       <!-- <label><strong>Sign Up</strong></label> <br>
+      <input type="email" name ="email"><button type="submit">Submit</button> -->
       <br>
       <a href="/babies/new">Enter Baby Info</a>&nbsp&nbsp&nbsp<a href="/babies">All Babies</a>
 
