--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,6 +5,13 @@ body {
   background-color: #f1f1f1;
 }
 
+h2 {
+  text-align: center;
+}
+.bbname {
+  text-align: center;
+}
+
 .container {
   width: 80%;
   margin: 0 auto;
@@ -21,9 +28,9 @@ body {
 }
 
 .table {
-  width: 100%;
   border-collapse: collapse;
   margin: 20px 0;
+  align-items: center;
 }
 
 .table th,
@@ -42,4 +49,82 @@ body {
 .table td > div {
   padding: 10px;
   display: inline-block;
+}
+
+.delete-form {
+  display: inline;
+}
+
+button {
+  padding: 5px 10px;
+  background-color: #ff4d4d;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #cc0000;
+}
+
+td {
+  padding: 10px;
+  border: 1px solid #dddddd;
+  text-align: left;
+  vertical-align: top;
+}
+
+th {
+  padding: 10px;
+  border: 1px solid #dddddd;
+  text-align: center;
+  vertical-align: top;
+  background-color: #f2f2f2;
+  font-weight: bold;
+}
+
+a {
+  display: block;
+  margin-bottom: 20px;
+  color: #007bff;
+  text-decoration: none;
+}
+
+.delete-form {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background: none;
+  cursor: pointer;
+  color: #007bff;
+  text-decoration: none;
+}
+
+.delete-form:hover {
+  text-decoration: underline;
+}
+
+.containerfeed {
+  padding: 20px;
+  border: 1px solid #dddddd;
+  background-color: #f2f2f2;
+}
+
+.infotable {
+  margin-right: auto;
+  margin-left: auto;
+}
+
+td .button {
+  align-items: center;
+}
+
+.submit {
+  width: 100%;
+}
+
+.space {
+  background-color: grey
 }
