--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,14 +2,17 @@
     <title>SplashPage</title>
 </head>
 <body>
-    <header class="header">
-        <div class="container">
-            <h1>Baby App</h1>
-            <img src="/images/baby-nipple-isolated-white-background-childrens-design-clip-art-element_433804-491.avif" alt="">
-        </div>
+    <header class="header" id="logo">
+        <img src="https://img.freepik.com/premium-vector/baby-nipple-isolated-white-background-childrens-design-clip-art-element_433804-491.jpg" alt="" id="babylogo">
+        <header class="header">
+            <div class="container">
+                <h1>Baby App</h1>
+            </div>
+    </header>
     </header>
     <div class="box">
-    <a href="/babies/new" class="links">Enter Baby Info</a>&nbsp&nbsp&nbsp<a href="/babies" class="links">All Babies</a>
+        <a href="/babies/new" class="links">Enter Baby Info</a>&nbsp&nbsp&nbsp<a href="/babies" class="links">All Babies</a>
     </div>
+    
 </body>
 </html>
