--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -143,3 +143,16 @@ td .button {
   padding: 10px 20px;
   color: #7b078a;
 }
+
+#logo{
+  position: relative;
+}
+
+#babylogo{
+  position:absolute;
+  top: 30px;
+  right: 0;
+  width: 100px;
+  height: 100px;
+  border-radius: 20%;
+}
